# CS252

./: .gitignore  README.md
JSPrac1/: js-hof-p1.js  js-hof-p2.js  js-hof-p3.js  js-hof-p4.js  js-hof-p5.js
JSPrac2/: js-hof2-p1.js  js-hof2-p2.js  js-hof2-p3.js  js-hof2-p4.js  js-hof2-p5.js
Midterm - Redo/: question6_redo.hs  untitled
Project/: Parser.hs  Syntax.hs  Tokens.hs  Writer.hs  import Data.Data  test.java  test.java_obf.txt
Projectintellij/: .gitignore  Projectintellij.cabal
Projectintellij/src/: Obf.hs  Obfuscator.hs  Parser.hs  Readobf.hs  Syntax.hs  obf_test.java  test.java  test.java_obf.ast  test.java_obf.java
Projectintellij/src/untitled folder/: ReadMe.txt
Projectintellij/src/untitled folder/CS252 Project/: test.java
Projectintellij/src/untitled folder/Report/: Report.aux  Report.bbl  Report.blg  Report.fdb_latexmk  Report.fls  Report.tex  cs252project.bib
Projectintellij/test/src/: test.java  test_obf.java
horstman_gl/: Assignment.scala  Assignment2.scala  Assignment3.scala
hw1/: BigNum.hs  test.hs
hw2/: WhileInterp.hs  test.hs  while-bool-semantics.aux  while-bool-semantics.fdb_latexmk  while-bool-semantics.fls  while-bool-semantics.tex  while-semantics.aux  while-semantics.fdb_latexmk  while-semantics.fls  while-semantics.tex
hw3/: WhileInterp.hi  WhileInterp.hs  WhileInterp_old.hs  test.hi  test.hs
hw_x/: bool.byco  bool.scm  compiler.rb  let.scm  let_try.byco  print.scm  vm.rb
lab1/: JSON.hs  lab1.hs
lab10/: lambdaCalc.lhs
lab11/: lab11.js
lab12/: chatServer.js
lab13/: stlc.hs
lab14/: lab14.js
lab15/: lab15.js
(+28 files in other folders)
