name:                 Projectintellij
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Ujjawal Garg
maintainer:           ujjawal.garg@sjsu.edu
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Projectintellij
  main-is:              Parser.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, parsec, MissingH
  hs-source-dirs:       src
  default-language:     Haskell2010
